chore: update .gitignore to exclude solr data directories and pids feat: add sunspot_rails gem for full text search feat: add sunspot_solr gem for optional pre-packaged Solr distribution for use in development. Not for use in production.
refactor(parishioners_controller.rb): rename user to parishioner in the controller and method names
feat(parishioners_controller.rb): add full text search for parishioners
feat(parishioners_controller.rb): add more fields to parishioner_params
fix(parishioners_controller.rb): fix find_parishioner method to use _id instead of _username

feat(parishioner.rb): add validation for name, gender, and birth_at
feat(routes.rb): add resource for parishioners
feat(sunspot.yml): add configuration for production, development, and test environments
docs(parishioners.yml): update phone numbers to be strings with quotes

test(parishioners_spec.rb): add fixtures and test for GET request to list parishioners with query parameter and authorization header

test(parishioners_spec.rb): add query search any_field test case with authorization header and after hook to format response content

test(parishioners_spec.rb): add test for creating a new parishioner with required fields
feat(parishioners_spec.rb): add request body example for creating a new parishioner with all fields
fix(parishioners_spec.rb): fix typo in test description

test(parishioners_spec.rb): add tests for show parishioner endpoint
test(parishioners_spec.rb): add tests for unknown user in delete parishioner endpoint

feat(parishioners_spec.rb): add tests for updating and deleting parishioners

refactor(users_spec.rb): remove after hook that sets metadata for response content in tests

feat(swagger): add endpoints for households and parishioners
fix(swagger): fix response description for delete household endpoint
fix(swagger): fix response description for delete parishioner endpoint
feat(swagger): add query parameter for list parishioners endpoint
feat(swagger): add create, show, update, a
