# app/models/parishioner.rb
@@ -9,4 +9,8 @@ class Parishioner < ApplicationRecord
   has_one :spouse_instance, class_name: "Parishioner", foreign_key: "spouse_id"
   has_one :mother_instance, class_name: "Parishioner", foreign_key: "mother_id"
   has_one :father_instance, class_name: "Parishioner", foreign_key: "father_id"
+
+  validates :name, presence: true
+  validates :gender, presence: true
+  validates :birth_at, presence: true
 end
